--- a/CSS Postion practice/index.html
+++ b/CSS Postion practice/index.html
@@ -13,6 +13,7 @@
             <div class="box relative">Relative</div>
             <div class="box fixed">Fixed</div>
             <div class="box sticky">Sticky</div>
+            <div class="box Sticky">Sticky</div>
         </div>
     </div>
 </body>
