--- a/CSS Postion practice/index.html
+++ b/CSS Postion practice/index.html
@@ -9,10 +9,15 @@
 <body>
     <div class="outer-container">
         <div class="inner-container">
+            <!-- grid-boxes -->
             <div class="box absolute">Absolute</div>
+
             <div class="box relative">Relative</div>
+
             <div class="box fixed">Fixed</div>
+
             <div class="box sticky">Sticky</div>
+
             <div class="box Sticky">Sticky</div>
         </div>
     </div>
