--- a/mini project 3/index.html
+++ b/mini project 3/index.html
@@ -31,7 +31,7 @@
                     <img src="images/profile.ico" alt="profile">
                 </div>
                 <div class="text">
-                    <h1>Elon musk</h1>
+                    <h1>Geethu</h1>
                     <h3>"Let's give money</h3>
                 </div>
              </div>
@@ -40,7 +40,7 @@
                     <img src="images/profile.ico" alt="profile">
                 </div>
                 <div class="text">
-                    <h1>Elon musk</h1>
+                    <h1>Geethu</h1>
                     <h3>"Let's earn money</h3>
                 </div>
              </div>
