--- a/CSS praticing project/index.html
+++ b/CSS praticing project/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <h1>Welcome to The Little Taco Shop</h1>
+        <h1>Little Taco Shop</h1>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li>
                     <a href="#about">About <abbr title="The Little Taco Shop">LTS</abbr></a>
                 </li>
@@ -39,6 +39,7 @@
         </figure>
     </header>
     <hr>
+
     <main>
         <article id="about">
             <h2>About <abbr title="The Little Taco Shop">LTS</abbr></h2>
